# Source

./: .gitattributes  .gitignore  AGENTS.md  BASE_CLOSURE.md  BUILDER.md  DIRECTION.md  MixtarRVS_PLAN.MD  P0.md  P3.md  P4.md  README.md  ROADMAP.md  Run-Mixtar-HyperV.ps1  pyproject.toml
AILang/: .gitattributes  .gitignore  CODEMAP.md  README.md  ailang.py  pyproject.toml
AILang/.github/workflows/: ailang-hard-gate.yml
AILang/benchmarks/: adapt_teardown_contract.json  performance_thresholds.json  run_benchmarks.py
AILang/benchmarks/ailang/: dict_ops.ail  durability_mega.ail  fib_mix.ail  file_io.ail  fixed_array_sum.ail  format_hex.ail  format_interp.ail  format_print.ail  format_str_int.ail  gauntlet_numeric.ail  gauntlet_ownership.ail  gauntlet_protocol.ail  loop_hash.ail  records_bench.ail  recursive_traversal.ail  slice_sum.ail
AILang/benchmarks/c/: dict_ops.c  fib_mix.c  file_io.c  fixed_array_sum.c  format_hex.c  format_interp.c  format_print.c  format_str_int.c  gauntlet_numeric.c  gauntlet_numeric_erased.c  gauntlet_ownership.c  gauntlet_ownership_erased.c  gauntlet_protocol.c  gauntlet_protocol_erased.c  loop_hash.c  records_bench.c  recursive_traversal.c  slice_sum.c
AILang/benchmarks/python/: dict_ops.py  fib_mix.py  file_io.py  fixed_array_sum.py  format_hex.py  format_interp.py  format_print.py  format_str_int.py  loop_hash.py  records_bench.py  recursive_traversal.py  slice_sum.py
AILang/benchmarks/rust/: dict_ops.rs  fib_mix.rs  file_io.rs  fixed_array_sum.rs  format_hex.rs  format_interp.rs  format_print.rs  format_str_int.rs  gauntlet_numeric.rs  gauntlet_numeric_erased.rs  gauntlet_ownership.rs  gauntlet_ownership_erased.rs  gauntlet_protocol.rs  gauntlet_protocol_erased.rs  loop_hash.rs  records_bench.rs  recursive_traversal.rs  slice_sum.rs
AILang/docs/: AILANG_UI_PLATFORM.md
AILang/examples/ui/: dsl_grid_caption_demo.ail  editor.ail  layout_state_check.ail  qml_bridge_demo.ail  svg_card_app.ail  svg_demo.ail  ui_backend_smoke.ail  ui_desktop.ail  ui_desktop_demo.ail  ui_desktop_dsl.ail  ui_desktop_pure.ail  ui_platform_loop.ail
AILang/source/: .bandit  .pylintrc  abi_symbols.py  ast_access.py  callback_types.py  calling_conventions.py  hardening_gates.ail  target_info.py  token_access.py  version.ail  version.py
AILang/source/cli/: builtins.py  cinclude_diagnostics.py  commands.py  compilation.py  diagnostics.py  emit_c_output.py  header_generation.py  layout_probe.py  llvm_diagnostics.py  main.py  optimizer_report.py  pgo_options.py  reports.py
AILang/source/codegen/: __init__.py  bigint_runtime.py  builtin_arrays.py  builtin_misc.py  builtin_string.py  codegen.py  codegen_bigint_format_mixin.py  codegen_class_record_mixin.py  codegen_errors.py  codegen_function_analysis_mixin.py  codegen_function_mixin.py  codegen_module_mixin.py  codegen_optimizer_report_mixin.py  codegen_support_mixin.py  collection_helpers.py  collection_helpers_types.py  context_emitter.py  control_flow_emitter.py  debug_info.py  exception_emitter.py  fast_jit.py  fast_jit_runtime.py  fast_jit_unsafe_scan.py  fast_jit_worker.py  memory_emitter.py  monomorphize.py  profiling_emitter.py  runtime_decls.py  runtime_decls_base.py  runtime_decls_file_io.py  runtime_decls_sqlite_math.py  runtime_decls_string_mem.py  runtime_decls_thread_sync.py  runtime_helpers.py  safety_arithmetic.py  safety_emitter.py  strlen_fact_cache.py  strlen_scalarization.py  templates.py  type_lowering.py
AILang/source/compiler/: __init__.py  compiler.py  modules.py
AILang/source/diagnostics/: __init__.py  diagnostics.py  diagnostics_catalog.py  diagnostics_models.py  (+14 more)
AILang/tests/: expected_outputs.json  test_arena_routing_llvm.py  test_arena_runtime_safety.py  test_backend_differential_report.py  test_baseconv_backend_parity.py  test_bounds_and_recursion_codegen.py  test_c_abi_type_aliases.py  test_c_abnormal_exit_report.py  test_c_backend_outputs.py  test_c_compat_abi.py  test_c_fixed_array_layout.py  test_c_format_specialization.py  test_c_loop_range_codegen.py  test_c_string_ownership.py  test_c_type_lowering.py  test_cabi_header_blocks.py  test_cbind_probe.py  test_change_dir_builtin.py  test_cimport_bindings.py  test_cinclude_backend_diagnostics.py  test_class_cleanup_hardening.py  test_cli_check_static_warnings.py  test_cli_version.py  test_complexity_guard.py  test_corpus_check.py  test_current_dir_builtin.py  test_dealloc_borrowed_string_diagnostics.py  test_drop_plan.py  test_effect_policy_p9.py  test_emit_c_cli.py  test_export_symbol_alias.py  test_fast_jit_worker.py  test_fd_builtin.py  test_ffi_layout_probe.py  test_ffi_report.py  test_format_report.py  test_format_strlen_budget.py  test_freestanding_c_compile.py  test_header_generation.py  test_hosted_process_and_dir_builtins.py  (+64 more)
AILang/tools/: activate_mingw_llvm.ps1  adapt_ir_compare.py  adapt_teardown_audit.py  backend_differential.py  bench_ui_backends.py  build_ui_demo.py  build_ui_dsl_app.py  build_ui_dsl_native_helpers.py  build_ui_micro_demo.py  c23_workload_compare.py  c_strict_compile.py  cbind_probe.py  cbind_probe_c.py  cbind_probe_emit.py  cbind_probe_model.py  codemap.py  compare_with_ailang_main.py  compare_with_ailang_main_helpers.py  compile_phase_profile.py  cython_full_experiment.py  durability_stress.py  env_check.py  export_ui_dsl.py  god_object_audit.py  hard_gate.py  jit_opt_sweep.py  language_surface_profile.py  llvm_pgo_probe.py  make_clean_zip.py  package_ailang.py  package_extract_smoke.py  package_matrix_report.py  package_smoke.py  parser_fuzz.py  public_tree_audit.py  quickcheck.py  regression_check.py  release_checklist.py  release_manifest.py  runtime_health_check.py  (+21 more)
AILang/verifier/: .gitignore  .pylintrc  __init__.py  build_exe.py  build_offline.py  cache.py  cli.py  core.py  mypy.ini  pyproject.toml  requirements.txt  verifier_linux.spec  verifier_report.py  verifier_windows.spec
Product/MWM/: README.md  meson.build  mwm.c  test-nested.sh
Prototypes/RmlUi/: CMakeLists.txt  Desktop.rcss  Desktop.rml  DesktopHost.cpp  DesktopHost.hpp  DesktopModel.cpp  DesktopModel.hpp  README.md  main.cpp
(+2256 files in other folders)
