[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mixtar-builder"
version = "1.0.0"
description = "Deterministic image-tree builder for MixtarRVS"
requires-python = ">=3.11"

[project.scripts]
mixtar-build = "mixtar_builder.__main__:main"
mixtar-kernel = "mixtar_builder.kernel_cli:main"
mixtar-apx = "mixtar_builder.apx:main"
