[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ailang-pure"
version = "1.8.0"
description = "AILang compiler (Python-hosted active implementation)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
llvm = ["llvmlite"]
dev = [
  "black",
  "isort",
  "ruff",
  "mypy",
  "pytest",
  "pylint",
  "bandit",
  "radon",
  "vulture",
  "pip-audit",
  "detect-secrets",
]

[project.scripts]
ailangc = "cli.main:main"

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  "out",
  "archived",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
]
